--- a/Index.html
+++ b/Index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
 
-    <body>
-        <h1>Hejsa</h1>
-        <h2>Prøver lige noget</h2>
-    </body>
+<body>
+    <h1>Hejsa</h1>
+    <h2>Prøver lige noget</h2>
+    <h2>endnu en test</h2>
+</body>
 </html>
