--- a/Index.html
+++ b/Index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html  lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="Style.css">
 </head>
 
-<body>
-    <h1>Hejsa</h1>
-    <h2>Prøver lige noget</h2>
-    <h2>endnu en test</h2>
+<body class="container">
+    <header>Header</header>
+    <main>Main</main>
+    <footer>Footer</footer>
 </body>
 </html>
