fjernet grid, bruger flex

--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,100 @@
 <!DOCTYPE html>
-<html  lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 
-<body class="container">
-    <header>Header</header>
-    <main>Main</main>
-    <footer>Footer</footer>
+<body>
+<header>
+    <input type="checkbox" class="toggle">
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Portfolio</a>
+            </li>
+            <li>
+                <a href="#">About Me</a>
+            </li>
+            <li>
+                <a href="#">Contact Me</a>
+            </li>
+        </ul>
+    </nav>
+    <h1>IWCH</h1>
+</header>
+
+<main>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
+</main>
+
+<footer>Footer</footer>
 </body>
 </html>
