--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 
 <body>
 <header>
-    <input type="checkbox" class="toggle">
+    <input type="checkbox" id="toggle_menu">
     <nav>
         <ul>
             <li>
@@ -22,77 +22,13 @@
             </li>
         </ul>
     </nav>
+    <label for="toggle_menu" class="menu_button_icon">
+        <span>X</span>
+    </label>
     <h1>IWCH</h1>
 </header>
 
 <main>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
-    <p>Jeg hedder isa og jeg er smaaaaader smød og dejli9g oh jeg glæder mig til juleaften hvor jeg får verdens aller bedste julegave!!</p>
 </main>
 
 <footer>Footer</footer>
