--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
         </ul>
     </nav>
     <label for="toggle_menu" class="menu_button_icon">
-        <span>X</span>
+        <span></span>
     </label>
     <h1>IWCH</h1>
 </header>
