footer eget html og css

--- a/footer.html
+++ b/footer.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="Style.css">
 </head>
-
 <body>
-<main></main>
-
-<footer>Footer</footer>
+<footer>
+    <p>&copy; 2022 Isabella Christiansen</p>
+</footer>
 </body>
 </html>
