rykket lidt ting

--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-<main></main>
-
-<footer>Footer</footer>
 </body>
 </html>
