created all the wanted files and linked header

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,49 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
+
 <body>
 
-    <div class="img_container">
+<div class="gallery">
+    <div class="img_container img1">
         <img src="imgs/stopmotion.png" alt="stopmotion workshop" width="300" height="200">
         <p>stopmotion</p>
     </div>
 
-    <div class="img_container">
+    <div class="img_container img2">
         <img src="imgs/adobeanimate.png" alt="adobe animate" width="300" height="200">
         <p>adobe animate</p>
     </div>
 
-    <div class="img_container">
-        <img src="imgs/adobeillustrator.png" alt="adobe illustrator" width="300" height="200">
-        <p>adobe illustrator</p>
+    <div class="img_container img3">
+        <img src="imgs/app.png" alt="Lo-fi application for audioguide" width="300" height="200">
+        <p>Lo-fi application for audioguide</p>
     </div>
 
-    <div class="img_container">
-        <img src="imgs/plante.jpg" alt="picture of plant" width="300" height="200">
-        <p>picture of plant</p>
-    </div>
-
-    <div class="img_container">
-        <img src="imgs/app.png" alt="Redesign of Zara" width="300" height="200">
-        <p>Redesign of Zara</p>
-    </div>
-
-    <div class="img_container">
+    <div class="img_container img4">
         <img src="imgs/redesign.png" alt="Redesign of Zara" width="300" height="200">
         <p>Redesign of Zara</p>
     </div>
-    
-    <div class="img_container">
+
+    <div class="img_container img 5">
         <img src="imgs/adobeillustrator.png" alt="adobe illustrator" width="300" height="200">
         <p>adobe illustrator</p>
     </div>
 
-    <div class="img_container">
+    <div class="img_container img6">
         <img src="imgs/plante.jpg" alt="picture of plant" width="300" height="200">
         <p>picture of plant</p>
+    </div>
+</div>
 
 </body>
 </html>
