--- a/header.html
+++ b/header.html
@@ -10,13 +10,13 @@
     <nav>
         <ul>
             <li>
-                <a href="#">Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a href="#">About Me</a>
+                <a href="contact.html">About Me</a>
             </li>
             <li>
-                <a href="#">Contact Me</a>
+                <a href="contact.html">Contact Me</a>
             </li>
         </ul>
     </nav>
