Gallery flex & menu right
bruger flex i stedet for grid til galleriet og har endelig rykket menuen på header til højre

--- a/header.html
+++ b/header.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 <header>
+    <h1>IWCH</h1>
     <input type="checkbox" id="toggle_menu">
     <nav>
         <ul>
@@ -13,7 +16,7 @@
                 <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-                <a href="contact.html">About Me</a>
+                <a href="about.html">About Me</a>
             </li>
             <li>
                 <a href="contact.html">Contact Me</a>
@@ -23,7 +26,6 @@
     <label for="toggle_menu" class="menu_button_icon">
         <span></span>
     </label>
-    <h1>IWCH</h1>
 </header>
 </body>
 </html>
