--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,52 @@
 
 <body>
 
+
+
 <div class="gallery">
+    <article>
+        <div class="img_container">
+            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+        </div>
+        <div class="text_container">
+            <h1>stopmotion 1</h1>
+            <p>text about stop motion</p>
+        </div>
+    </article>
+
+    <article>
+        <div class="img_container">
+            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+        </div>
+        <div class="text_container">
+            <h1>stopmotion 2</h1>
+            <p>text about stop motion</p>
+        </div>
+    </article>
+
+    <article>
+        <div class="img_container">
+            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+        </div>
+        <div class="text_container">
+            <h1>stopmotion 3</h1>
+            <p>text about stop motion</p>
+        </div>
+    </article>
+
+    <article>
+        <div class="img_container">
+            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+        </div>
+        <div class="text_container">
+            <h1>stopmotion 4</h1>
+            <p>text about stop motion</p>
+        </div>
+    </article>
+
+<!--    adsasdasdasd-->
+    <br><hr><br>
+
     <div class="img_container img1">
         <img src="imgs/stopmotion.png" alt="stopmotion workshop" width="300" height="200">
         <p>stopmotion</p>
