--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="portfolio.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="loadContent.js"></script>
 </head>
 
 <body>
-
+<header>
+    <div id="Header"></div>
+</header>
 
 <div class="gallery">
     <article>
