--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,11 @@
     <script src="loadContent.js"></script>
 </head>
 
+
+
 <body>
 <header>
-    <div id="Header"></div>
+    <div id="header"></div>
 </header>
 
 <div class="gallery">
@@ -20,74 +22,64 @@
             <img src="imgs/stopmotion.png" alt="stopmotion workshop">
         </div>
         <div class="text_container">
-            <h1>stopmotion 1</h1>
+            <h1>stopmotion</h1>
             <p>text about stop motion</p>
         </div>
     </article>
 
     <article>
         <div class="img_container">
-            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+            <img src="imgs/adobeanimate.png" alt="adobe animate">
         </div>
         <div class="text_container">
-            <h1>stopmotion 2</h1>
-            <p>text about stop motion</p>
+            <h1>Adobe Animation</h1>
+            <p>text about adobe animate</p>
         </div>
     </article>
 
     <article>
         <div class="img_container">
-            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+            <img src="imgs/app.png" alt="Lo-fi application for audioguide">
         </div>
         <div class="text_container">
-            <h1>stopmotion 3</h1>
-            <p>text about stop motion</p>
+            <h1>Lo-fi Xd application</h1>
+            <p>Lo-fi application for audioguide</p>
         </div>
     </article>
 
     <article>
         <div class="img_container">
-            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+            <img src="imgs/redesign.png" alt="Redesign of Zara">
         </div>
         <div class="text_container">
-            <h1>stopmotion 4</h1>
-            <p>text about stop motion</p>
+            <h1>Redesign of Zara</h1>
+            <p>Redesign of Zaran</p>
         </div>
     </article>
 
-<!--    adsasdasdasd-->
-    <br><hr><br>
+    <article>
+        <div class="img_container">
+            <img src="imgs/adobeillustrator.png" alt="adobe illustrator">
+        </div>
+        <div class="text_container">
+            <h1>adobe illustration</h1>
+            <p>adobe illustrator</p>
+        </div>
+    </article>
 
-    <div class="img_container img1">
-        <img src="imgs/stopmotion.png" alt="stopmotion workshop" width="300" height="200">
-        <p>stopmotion</p>
-    </div>
-
-    <div class="img_container img2">
-        <img src="imgs/adobeanimate.png" alt="adobe animate" width="300" height="200">
-        <p>adobe animate</p>
-    </div>
-
-    <div class="img_container img3">
-        <img src="imgs/app.png" alt="Lo-fi application for audioguide" width="300" height="200">
-        <p>Lo-fi application for audioguide</p>
-    </div>
-
-    <div class="img_container img4">
-        <img src="imgs/redesign.png" alt="Redesign of Zara" width="300" height="200">
-        <p>Redesign of Zara</p>
-    </div>
-
-    <div class="img_container img 5">
-        <img src="imgs/adobeillustrator.png" alt="adobe illustrator" width="300" height="200">
-        <p>adobe illustrator</p>
-    </div>
-
-    <div class="img_container img6">
-        <img src="imgs/plante.jpg" alt="picture of plant" width="300" height="200">
-        <p>picture of plant</p>
-    </div>
+    <article>
+        <div class="img_container">
+            <img src="imgs/plante.jpg" alt="picture of plant">
+        </div>
+        <div class="text_container">
+            <h1>picture of plant</h1>
+            <p>plant picture</p>
+        </div>
+    </article>
 </div>
 
+<footer>
+    <div id="footer"></div>
+</footer>
 </body>
 </html>
