media query for big screens on header/navigation

--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="loadContent.js"></script>
 </head>
 <body>
-
+<header>
+    <div id="header"></div>
+</header>
 <div class="phone">
-    <img src="imgs/phone.png" alt="Call me" width="25" height="25">
+    <img src="imgs/phone.png" alt="Call me">
     <p>Call me</p>
 </div>
 
 <div class="mail">
-    <img src="imgs/mail.png" alt="Mail me" width="30" height="20">
+    <img src="imgs/mail.png" alt="Mail me">
     <p>Mail me</p>
 </div>
 
-
+<footer>
+    <div id="footer"></div>
+</footer>
 </body>
 </html>
