--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="portfolio.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="loadContent.js"></script>
 </head>
 
 <body>
+<header>
+    <div id="header"></div>
+</header>
+
+<main>
+<p>hej med dig</p>
+</main>
+
+<footer id="footer"></footer>
 </body>
 </html>
