--- a/about.html
+++ b/about.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="loadContent.js"></script>
 </head>
-<body>
-
+<body><header>
+    <div id="header"></div>
+</header>
+<footer>
+    <div id="footer"></div>
+</footer>
 </body>
 </html>
