--- a/header.html
+++ b/header.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="header.css">
 </head>
 <body>
 <header>
-    <h1>IWCH</h1>
+    <a href="index.html">
+        <h1>IWCH</h1>
+    </a>
     <input type="checkbox" id="toggle_menu">
     <nav>
         <ul>
