--- a/portfolio.html
+++ b/portfolio.html
@@ -9,77 +9,75 @@
     <script src="loadContent.js"></script>
 </head>
 
-
-
 <body>
 <header>
     <div id="header"></div>
 </header>
 
-<div class="gallery">
-    <article>
-        <div class="img_container">
-            <img src="imgs/stopmotion.png" alt="stopmotion workshop">
-        </div>
-        <div class="text_container">
-            <h1>stopmotion</h1>
-            <p>text about stop motion</p>
-        </div>
-    </article>
+<main>
+    <div class="gallery">
+        <article>
+            <div class="img_container">
+                <img src="imgs/stopmotion.png" alt="stopmotion workshop">
+            </div>
+            <div class="text_container">
+                <h1>stopmotion</h1>
+                <p>text about stop motion</p>
+            </div>
+        </article>
 
-    <article>
-        <div class="img_container">
-            <img src="imgs/adobeanimate.png" alt="adobe animate">
-        </div>
-        <div class="text_container">
-            <h1>Adobe Animation</h1>
-            <p>text about adobe animate</p>
-        </div>
-    </article>
+        <article>
+            <div class="img_container">
+                <img src="imgs/adobeanimate.png" alt="adobe animate">
+            </div>
+            <div class="text_container">
+                <h1>Adobe Animation</h1>
+                <p>text about adobe animate</p>
+            </div>
+        </article>
 
-    <article>
-        <div class="img_container">
-            <img src="imgs/app.png" alt="Lo-fi application for audioguide">
-        </div>
-        <div class="text_container">
-            <h1>Lo-fi Xd application</h1>
-            <p>Lo-fi application for audioguide</p>
-        </div>
-    </article>
+        <article>
+            <div class="img_container">
+                <img src="imgs/app.png" alt="Lo-fi application for audioguide">
+            </div>
+            <div class="text_container">
+                <h1>Lo-fi Xd application</h1>
+                <p>Lo-fi application for audioguide</p>
+            </div>
+        </article>
 
-    <article>
-        <div class="img_container">
-            <img src="imgs/redesign.png" alt="Redesign of Zara">
-        </div>
-        <div class="text_container">
-            <h1>Redesign of Zara</h1>
-            <p>Redesign of Zaran</p>
-        </div>
-    </article>
+        <article>
+            <div class="img_container">
+                <img src="imgs/redesign.png" alt="Redesign of Zara">
+            </div>
+            <div class="text_container">
+                <h1>Redesign of Zara</h1>
+                <p>Redesign of Zaran</p>
+            </div>
+        </article>
 
-    <article>
-        <div class="img_container">
-            <img src="imgs/adobeillustrator.png" alt="adobe illustrator">
-        </div>
-        <div class="text_container">
-            <h1>adobe illustration</h1>
-            <p>adobe illustrator</p>
-        </div>
-    </article>
+        <article>
+            <div class="img_container">
+                <img src="imgs/adobeillustrator.png" alt="adobe illustrator">
+            </div>
+            <div class="text_container">
+                <h1>adobe illustration</h1>
+                <p>adobe illustrator</p>
+            </div>
+        </article>
 
-    <article>
-        <div class="img_container">
-            <img src="imgs/plante.jpg" alt="picture of plant">
-        </div>
-        <div class="text_container">
-            <h1>picture of plant</h1>
-            <p>plant picture</p>
-        </div>
-    </article>
-</div>
+        <article>
+            <div class="img_container">
+                <img src="imgs/plante.jpg" alt="picture of plant">
+            </div>
+            <div class="text_container">
+                <h1>picture of plant</h1>
+                <p>plant picture</p>
+            </div>
+        </article>
+    </div>
+</main>
 
-<footer>
-    <div id="footer"></div>
-</footer>
+<footer id="footer"></footer>
 </body>
 </html>
