--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<footer>
-    <p>&copy; 2022 Isabella Christiansen</p>
-</footer>
-</body>
-</html>
+<link rel="stylesheet" href="footer.css">
+
+<p>&copy; 2022 Isabella Christiansen</p>
