index side css done

--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="portfolio.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 <header id="header"></header>
 
 <main>
-<p>hej med dig</p>
+    <div class="centerpiece">
+        <img src="imgs/mig.jpg" class="center">
+        <p>Isabella Christiansen</p>
+        <p>Multimedia design</p>
+    </div>
 </main>
 
 <footer id="footer"></footer>
