--- a/contact.html
+++ b/contact.html
@@ -5,21 +5,34 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
 <header>
     <div id="header"></div>
 </header>
-<div class="phone">
-    <img src="imgs/phone.png" alt="Call me">
-    <p>Call me</p>
-</div>
+<main>
 
-<div class="mail">
-    <img src="imgs/mail.png" alt="Mail me">
-    <p>Mail me</p>
-</div>
+    <div class="whole">
+        <h1>Wanna get in touch with me?</h1>
 
+        <div>
+            <div class="phone frame">
+                <img src="imgs/phone.png" alt="Call me">
+            </div>
+            <p>Call me</p>
+        </div>
+
+
+        <div>
+            <div class="mail frame">
+                <img src="imgs/mail.png" alt="Mail me">
+            </div>
+            <p>Mail me</p>
+        </div>
+
+    </div>
+</main>
 <footer>
     <div id="footer"></div>
 </footer>
