Mail too long, does not align icons anymore, table ?

--- a/contact.html
+++ b/contact.html
@@ -12,23 +12,29 @@
     <div id="header"></div>
 </header>
 <main>
-
     <div class="whole">
         <h1>Wanna get in touch with me?</h1>
 
-        <div>
-            <div class="phone frame">
+        <div class="padding">
+            <div class="frame">
                 <img src="imgs/phone.png" alt="Call me">
             </div>
-            <p>Call me</p>
+            <div class="information">
+                <p>Call me</p>
+                <p> +45 22136677</p>
+            </div>
         </div>
 
 
-        <div>
-            <div class="mail frame">
+        <div class="padding">
+            <div class="frame">
                 <img src="imgs/mail.png" alt="Mail me">
             </div>
-            <p>Mail me</p>
+
+            <div class="information">
+                <p>Mail me</p>
+                <p>Megaoreomuffin@hotmail.com</p>
+            </div>
         </div>
 
     </div>
