Table for at align ikoner og tekst, plus ryddet op i css

--- a/contact.html
+++ b/contact.html
@@ -14,29 +14,34 @@
 <main>
     <div class="whole">
         <h1>Wanna get in touch with me?</h1>
-
-        <div class="padding">
-            <div class="frame">
-                <img src="imgs/phone.png" alt="Call me">
-            </div>
-            <div class="information">
-                <p>Call me</p>
-                <p> +45 22136677</p>
-            </div>
-        </div>
-
-
-        <div class="padding">
-            <div class="frame">
-                <img src="imgs/mail.png" alt="Mail me">
-            </div>
-
-            <div class="information">
-                <p>Mail me</p>
-                <p>Megaoreomuffin@hotmail.com</p>
-            </div>
-        </div>
-
+        <table>
+            <tr>
+                <td>
+                    <div class="frame">
+                        <img src="imgs/phone.png" alt="Call me">
+                    </div>
+                </td>
+                <td>
+                    <div class="information">
+                        <p>Call me</p>
+                        <p> +45 22136677</p>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <div class="frame">
+                        <img src="imgs/mail.png" alt="Mail me">
+                    </div>
+                </td>
+                <td>
+                    <div class="information">
+                        <p>Mail me</p>
+                        <p>Megaoreomuffin@hotmail.com</p>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </div>
 </main>
 <footer>
