--- a/about.html
+++ b/about.html
@@ -5,10 +5,31 @@
     <title>Title</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
+    <link rel="stylesheet" href="about.css">
 </head>
-<body><header>
+<body>
+<header>
     <div id="header"></div>
 </header>
+<main>
+    <div class="about_me_block">
+        <div class="about_me_img">
+            <img src="imgs/bigger.jpg" alt="picture of me">
+        </div>
+        <div class="about_me_text">
+            <h1>About me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </div>
+
+    <div class="adobe">
+        <img src="imgs/adobepakken2.png" alt="Adobe Animate, Adobe XD, Adpbe InDesign and Adobe Photoshop">
+    </div>
+</main>
 <footer>
     <div id="footer"></div>
 </footer>
