tilføjet text til about og portfolio

--- a/about.html
+++ b/about.html
@@ -18,11 +18,14 @@
         </div>
         <div class="about_me_text">
             <h1>About me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-                esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hi! I'm Isabella Christiansen from Denmark and my goal is to make websites. Even though that is what i strife for, I've got other skills aswell.</p>
+            <br>
+            <p>I've got experience working with HTML, CSS and JavaScript.</p>
+            <br>
+            <p>&</p>
+            <br>
+            <p>I've got experience working with the Adobe programs: Animate, Xd, InDesign, Photoshop and Illustrator</p>
+
         </div>
     </div>
 
