--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
                 <img src="imgs/plante.jpg" alt="picture of plant">
             </div>
             <div class="text_container">
-                <h1>picture of plant</h1>
-                <p>plant picture</p>
+                <h1>Picture of a vase</h1>
+                <p>A picture taken of a vase with a with flowes.</p>
             </div>
         </article>
 
@@ -32,19 +32,19 @@
             </div>
             <div class="text_container">
                 <h1>adobe illustration</h1>
-                <p>adobe illustrator</p>
+                <p>This illustration is made in Adobe illustrator with the pentool</p>
             </div>
         </article>
 
-        <article>
+       <!-- <article>
             <div class="img_container">
                 <img src="imgs/stopmotion.png" alt="stopmotion workshop">
             </div>
             <div class="text_container">
                 <h1>stopmotion</h1>
-                <p>text about stop motion</p>
+                <p>This stop motion movie was made  </p>
             </div>
-        </article>
+        </article>-->
 
         <article>
             <div class="img_container">
@@ -52,7 +52,7 @@
             </div>
             <div class="text_container">
                 <h1>Adobe Animation</h1>
-                <p>text about adobe animate</p>
+                <p>This animation is made in Adobe Animation and can be seen on this link: https://proces.iwch.dk/adobe-animate/</p>
             </div>
         </article>
 
@@ -62,7 +62,7 @@
             </div>
             <div class="text_container">
                 <h1>Lo-fi Xd application</h1>
-                <p>Lo-fi application for audioguide</p>
+                <p>Lo-fi application for an audioguide.</p>
             </div>
         </article>
 
@@ -72,7 +72,7 @@
             </div>
             <div class="text_container">
                 <h1>Redesign of Zara</h1>
-                <p>Redesign of Zaran</p>
+                <p>On this redesign I made the clothing categorizing menu.</p>
             </div>
         </article>
     </div>
