stor tekst til store skærme til portfolien

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             </div>
             <div class="text_container">
                 <h1>Picture of a vase</h1>
-                <p>A picture taken of a vase with a with flowes.</p>
+                <p>A picture taken of a vase with flowers.</p>
             </div>
         </article>
 
@@ -31,20 +31,10 @@
                 <img src="imgs/adobeillustrator.png" alt="adobe illustrator">
             </div>
             <div class="text_container">
-                <h1>adobe illustration</h1>
+                <h1>Adobe Illustration</h1>
                 <p>This illustration is made in Adobe illustrator with the pentool</p>
             </div>
         </article>
-
-       <!-- <article>
-            <div class="img_container">
-                <img src="imgs/stopmotion.png" alt="stopmotion workshop">
-            </div>
-            <div class="text_container">
-                <h1>stopmotion</h1>
-                <p>This stop motion movie was made  </p>
-            </div>
-        </article>-->
 
         <article>
             <div class="img_container">
