Valideret - tilføjet alt="" på img

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 
 <main>
     <div class="centerpiece">
-        <img src="imgs/mig.jpg" class="center">
+        <img src="imgs/mig.jpg" class="center" alt="Et  billede af Isabella" >
         <p>Isabella Christiansen</p>
         <p>Multimedia design</p>
     </div>
