--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="loadContent.js"></script>
     <link rel="stylesheet" href="contact.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1"/>
 </head>
 <body>
 <header>
@@ -16,36 +16,56 @@
     <div class="whole">
         <h1>Wanna get in touch with me?</h1>
 
-        <table>
-            <tr>
-                <td>
-                    <div class="frame">
-                        <img src="imgs/phone.png" alt="Call me">
-                    </div>
-                </td>
-                <td>
-                    <div class="information">
-                        <p>Call me</p>
-                        <p> +45 22136677</p>
-                    </div>
-                </td>
-            </tr>
+        <div class="infoblock">
+            <div class="frame">
+                <img src="imgs/phone.png" alt="Call me">
+            </div>
+            <div class="information">
+                <p>Call me:</p>
+                <p> +45 22136677</p>
+            </div>
+        </div>
+
+        <div class="infoblock">
+            <div class="frame">
+                <img src="imgs/mail.png" alt="Mail me">
+            </div>
+            <div class="information">
+                <p>Mail me:</p>
+                <p>megaoreomuffin@hotmail.com</p>
+            </div>
+        </div>
+
+        <!-- <table>
+             <tr>
+                 <td>
+                     <div class="frame">
+                         <img src="imgs/phone.png" alt="Call me">
+                     </div>
+                 </td>
+                 <td>
+                     <div class="information">
+                         <p>Call me</p>
+                         <p> +45 22136677</p>
+                     </div>
+                 </td>
+             </tr>
 
 
-            <tr>
-                <td>
-                    <div class="frame">
-                        <img src="imgs/mail.png" alt="Mail me">
-                    </div>
-                </td>
-                <td>
-                    <div class="information">
-                        <p>Mail me</p>
-                        <p>Megaoreomuffin@hotmail.com</p>
-                    </div>
-                </td>
-            </tr>
-        </table>
+             <tr>
+                 <td>
+                     <div class="frame">
+                         <img src="imgs/mail.png" alt="Mail me">
+                     </div>
+                 </td>
+                 <td>
+                     <div class="information">
+                         <p>Mail me</p>
+                         <p>Megaoreomuffin@hotmail.com</p>
+                     </div>
+                 </td>
+             </tr>
+         </table>-->
 
     </div>
 </main>
